...
                >
                  <Paragraph
                    fontSize="$3"
                    fontWeight="400"
                    color="$color12"
                  >
                    {isSaving ? 'Saving...' : 'Continue'}
                  </Paragraph>
                </GlassButton>
                <Paragraph
                  fontSize="$3"
                  color="$color10"
                  textAlign="center"
...
