...
    >
      <VideoPlayerArea>
        <YStack
          flex={1}
          position="relative"
          onPress={onTap}
          testID="video-player-container"
        >
          {videoUri && (
            <VideoPlayer
              ref={nativeVideoPlayerRef}
              videoUri={videoUri}
              isPlaying={videoShouldPlay}
...
